# Z80Emu

./: .gitignore  CMakeLists.txt  CMakeSettings.json  readme.md
docs/: dev_journal.md
include/: Bus.h  Cpu.h  Z80.h
src/: Bus.cpp  Cpu.cpp  CpuOps.cpp  Z80.cpp  main.cpp
tests/: test_add_a_r.cpp  test_alu_16bit.cpp  test_arithmetic_op_codes.cpp  test_bus.cpp  test_cpu.cpp  test_cpu_inc_dec_16_bit.cpp  test_cpu_load_8bit.cpp  test_cpu_logic_immediate.cpp  test_op_codes.cpp  test_stack_push_pop.cpp  test_z80_fetch.cpp  trigger.txt
